--- a/alumni-application-frontend/package.json
+++ b/alumni-application-frontend/package.json
@@ -13,7 +13,7 @@
     "react-leaflet": "^4.2.1",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
