--- a/alumni-application-frontend/package.json
+++ b/alumni-application-frontend/package.json
@@ -8,12 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-scripts": "latest",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "^3.0.1",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4",
     "webpack": "^5.89.0",
